# origlang

./: .gitignore  Cargo.toml  LICENSE.md  README.md  deny.toml  renovate.json
.github/workflows/: actionlint.yml  cargo-deny.yml  rust-wasm.yml  rust.yml  todo-as-issue.yml  validate-renovate-custom-managers.yml  validate-renovate.yml
.github/workflows/shell_scripts/: validate-renovate-custom-managers.sh
compile/positive/non-perf/: 99_bottles_of_beer.ol  fizz_buzz.origlang  utf_8.origlang
compile/positive/perf/: a_lot_of_string_literal_printout.ol  nested_if_1000.origlang  nested_if_1000_str.origlang  very_long_string_literal_printout.origlang
docs/: pattern.md  syntax.md
package/: README.md
package/origlang-ast/: Cargo.toml
package/origlang-ast/src/: after_parse.rs  lib.rs
package/origlang-cli/: Cargo.toml
package/origlang-cli/src/: args.rs  error.rs  main.rs  task.rs
package/origlang-cli/src/task/: emit.rs  interpret.rs  lexer_dump.rs  print_ast.rs  repl.rs  test.rs
package/origlang-compiler/: Cargo.toml
package/origlang-compiler-entrypoint/: Cargo.toml
package/origlang-compiler-entrypoint/src/: lib.rs
package/origlang-compiler-scanner-example/: Cargo.toml
package/origlang-compiler-scanner-example/src/: lib.rs
package/origlang-compiler/src/: char_list.rs  chars.rs  entry.rs  error.rs  lexer.rs  lib.rs  parser.rs  token_stream.rs  type_check.rs
package/origlang-compiler/src/chars/: boundary.rs  line.rs  occurrence.rs
package/origlang-compiler/src/lexer/: error.rs  tests.rs  token.rs
package/origlang-compiler/src/parser/: error.rs  recover.rs  recursive_descent.rs
package/origlang-compiler/src/type_check/: error.rs
package/origlang-core/: Cargo.toml
package/origlang-core/src/: ast.rs  char_list.rs  error.rs  main.rs  platform.rs  type_check.rs
package/origlang-core/src/cli/task/: lexer_dump.rs  print_ast.rs
package/origlang-core/src/type_check/: error.rs
package/origlang-diagnostics/: Cargo.toml
package/origlang-diagnostics/src/: lib.rs
package/origlang-interop/: Cargo.toml  README.md  build.sh
package/origlang-interop-frontend-webserver/: Cargo.toml  README.md  build.rs
package/origlang-interop-frontend-webserver/src/: main.rs
package/origlang-interop-frontend-webserver/www/: index.html
package/origlang-interop/src/: lib.rs
package/origlang-ir/: Cargo.toml
package/origlang-ir-optimizer/: Cargo.toml
package/origlang-ir-optimizer/src/: expr.rs  ir0.rs  ir1.rs  lib.rs  lower.rs  num.rs  preset.rs  sealed.rs
package/origlang-ir-optimizer/src/ir1/: tests.rs
package/origlang-ir/src/: lib.rs
package/origlang-lexer/: Cargo.toml
package/origlang-lexer/src/: boundary.rs  error.rs  lib.rs  tests.rs  token.rs
package/origlang-parser/: Cargo.toml
package/origlang-parser/src/: error.rs  lib.rs  parser.rs  recover.rs
package/origlang-platform/: Cargo.toml
package/origlang-platform/src/: lib.rs  platform.rs
package/origlang-platform/src/platform/: non_windows.rs  windows.rs
package/origlang-runtime/: Cargo.toml
package/origlang-runtime/src/: invoke_once.rs  ir.rs  lib.rs  tests.rs
package/origlang-slice-in-box/: Cargo.toml
package/origlang-slice-in-box/src/: lib.rs
package/origlang-source-span/: Cargo.toml
package/origlang-source-span/src/: lib.rs
package/origlang-testsuite/: Cargo.toml
package/origlang-testsuite/src/: main.rs
package/origlang-token-stream/: Cargo.toml
package/origlang-token-stream/src/: lib.rs
package/origlang-type-stringify/: Cargo.toml
package/origlang-type-stringify/src/: lib.rs
package/origlang-typecheck/: Cargo.toml
package/origlang-typecheck/src/: lib.rs  type_check.rs
package/origlang-typecheck/src/type_check/: error.rs
package/origlang-typesystem-model/: Cargo.toml
package/origlang-typesystem-model/src/: lib.rs
src/: ast.rs  cli.rs  error.rs  lexer.rs  main.rs  parser.rs  platform.rs  runtime.rs  type_check.rs
src/ast/: after_parse.rs
src/cli/: args.rs  task.rs
src/cli/task/: interpret.rs  lexer_dump.rs  print_ast.rs  repl.rs  test.rs
