[workspace]
resolver = "2"
members = [
    "package/origlang-ast",
    "package/origlang-cli",
    "package/origlang-compiler",
    "package/origlang-diagnostics",
    "package/origlang-interop",
    "package/origlang-interop-frontend-webserver",
    "package/origlang-ir",
    "package/origlang-ir-optimizer",
    "package/origlang-runtime",
    "package/origlang-source-span",
    "package/origlang-typesystem-model",
    "package/origlang-platform",
]
