[package]
name = "origlang-cli"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.15", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
thiserror = "1.0.56"
origlang-compiler = { path = "../origlang-compiler" }
origlang-typesystem-model = { path = "../origlang-typesystem-model" }
origlang-runtime = { path = "../origlang-runtime" }
ariadne = "0.3.0"
origlang-platform = { path = "../origlang-platform" }
origlang-ast = { path = "../origlang-ast" }
strum = { version = "0.25.0", features = ["derive"] }
origlang-ir = { path = "../origlang-ir" }
origlang-ir-optimizer = { path = "../origlang-ir-optimizer" }
tap = "1.0.1"
