[package]
name = "origlang-cli"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.59"
origlang-compiler = { path = "../origlang-compiler" }
origlang-typesystem-model = { path = "../origlang-typesystem-model" }
origlang-runtime = { path = "../origlang-runtime" }
ariadne = "0.4.1"
origlang-platform = { path = "../origlang-platform" }
origlang-ast = { path = "../origlang-ast" }
strum = { version = "0.26.2", features = ["derive"] }
origlang-ir = { path = "../origlang-ir" }
origlang-ir-optimizer = { path = "../origlang-ir-optimizer" }
tap = "1.0.1"
