[package]
name = "origlang-cli"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "2.0.0"
origlang-typesystem-model = { path = "../origlang-typesystem-model" }
origlang-typecheck = { path = "../origlang-typecheck" }
origlang-runtime = { path = "../origlang-runtime" }
ariadne = "0.6.0"
origlang-platform = { path = "../origlang-platform" }
origlang-ast = { path = "../origlang-ast" }
strum = { version = "0.27.0", features = ["derive"] }
origlang-ir = { path = "../origlang-ir" }
origlang-ir-optimizer = { path = "../origlang-ir-optimizer" }
tap = "1.0.1"
origlang-lexer = { path = "../origlang-lexer" }
origlang-parser = { path = "../origlang-parser" }
