[package]
name = "origlang-compiler-entrypoint"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.21" }
origlang-ast = { path = "../origlang-ast" }
origlang-diagnostics = { path = "../origlang-diagnostics" }
origlang-ir = { path = "../origlang-ir" }
origlang-ir-optimizer = { path = "../origlang-ir-optimizer" }
origlang-lexer = { path = "../origlang-lexer" }
origlang-parser = { path = "../origlang-parser" }
origlang-typecheck = { path = "../origlang-typecheck" }
thiserror = { version = "2.0.0" }
