[package]
name = "origlang-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
origlang-ast = { path = "../origlang-ast" }
origlang-typesystem-model = { path = "../origlang-typesystem-model" }
derive_more = "0.99.17"
log = "0.4.20"
thiserror = "1.0.45"
origlang-platform = { path = "../origlang-platform" }
origlang-source-span = { path = "../origlang-source-span" }
origlang-diagnostics = { path = "../origlang-diagnostics" }
origlang-ir = { path = "../origlang-ir" }
origlang-ir-optimizer = { path = "../origlang-ir-optimizer" }

[dev-dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
