[package]
name = "origlang-interop-frontend-webserver"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
origlang-interop = { path = "../origlang-interop" }
actix-files = "0.6.5"
