[package]
name = "origlang-interop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
origlang-compiler = { path = "../origlang-compiler" }
origlang-runtime = { path = "../origlang-runtime" }
js-sys = "0.3.63"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.63", features = ["console"] }
