[package]
name = "origlang-interop"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
origlang-runtime = { path = "../origlang-runtime" }
origlang-typecheck = { path = "../origlang-typecheck" }
origlang-typesystem-model = { path = "../origlang-typesystem-model" }
origlang-ir-optimizer = { path = "../origlang-ir-optimizer" }
origlang-ir = { path = "../origlang-ir" }
origlang-parser = { path = "../origlang-parser" }
js-sys = "0.3.69"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.69", features = ["console"] }
thiserror = "1.0.59"
