[package]
name = "origlang-ir-optimizer"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
origlang-ir = { path = "../origlang-ir" }
origlang-typesystem-model = { path = "../origlang-typesystem-model" }
origlang-ast = { path = "../origlang-ast" }
tap = "1.0.1"
num-traits = "0.2.17"
