[package]
name = "origlang-runtime"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.0"
derive_more = "0.99.17"
log = "0.4.21"
tap = "1.0.1"
origlang-typesystem-model = { path = "../origlang-typesystem-model" }
origlang-ast = { path = "../origlang-ast" }
origlang-ir = { path = "../origlang-ir" }
origlang-type-stringify = { path = "../origlang-type-stringify" }
