[package]
name = "origlang-testsuite"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
origlang-ast = { version = "0.1.0", path = "../origlang-ast" }
origlang-ir = { version = "0.1.0", path = "../origlang-ir" }
origlang-ir-optimizer = { version = "0.1.0", path = "../origlang-ir-optimizer" }
origlang-runtime = { version = "0.1.0", path = "../origlang-runtime" }
origlang-source-span = { version = "*", path = "../origlang-source-span" }
origlang-parser = { path = "../origlang-parser" }
origlang-typecheck = { path = "../origlang-typecheck" }
thiserror = "2.0.0"
