[package]
name = "origlang-typecheck"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
origlang-typesystem-model = { path = "../origlang-typesystem-model" }
origlang-ast = { path = "../origlang-ast" }
origlang-slice-in-box = { path = "../origlang-slice-in-box" }
log = "0.4.21"
thiserror = "2.0.0"
