[package]
name = "origlang-typesystem-model"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "2.0.0"
ordered-float = "5.0.0"
origlang-ast = { path = "../origlang-ast" }
origlang-type-stringify = { path = "../origlang-type-stringify"}
